--- a/tabPageFiles/updatefail.html
+++ b/tabPageFiles/updatefail.html
@@ -27,6 +27,9 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 				font-family: Vegur;
 				src: url('lib/fonts/vegur.otf');
 			}
+			* {
+				letter-spacing: 0px;
+			}
 			.genBox {
 				font-family: Vegur;
 				line-height: 80%;
