--- a/tabPageFiles/update.html
+++ b/tabPageFiles/update.html
@@ -23,6 +23,9 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 		<script type="text/javascript" src="lib/facebox/facebox.js"></script>
 		
 		<style type="text/css">
+			* {
+				letter-spacing: 0px;
+			}
 			@font-face {
 				font-family: Vegur;
 				src: url('lib/fonts/vegur.otf');
