Okay, so the last version wasn't working. This one is. Dammit..

--- a/tabPageFiles/popup.html
+++ b/tabPageFiles/popup.html
@@ -202,7 +202,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 					console.log("Facebox thing should be up now.");
 				});
 				
-				$("#customLinkFbSubmit").live('click',function() {
+				$("#linkSubmit").live('click',function() {
 					var subBtn = $("#customLinkFbSubmit");
 					//subBtn.attr("value","Adding Link...").attr("disabled","disabled");
 					// Let's grab pertinent information
