--- a/tabPageFiles/options.html
+++ b/tabPageFiles/options.html
@@ -21,8 +21,66 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 		
 	</head>
 	<body>
-		<br /><br /><br /><br /><br />
-		<h1 style="text-shadow:0px 0px 4px #000000;color:#eeeeee;">In the next update, this page will start to fill up with all the things you can configure. Right now, though, I just wanted to get you guys the core functionality of the New Tab Page beauty going. Enjoy, and stay tuned!</h1>
+		<div class="genBox">
+			<h2>Options</h2>
+			
+			<form id="bantpOptions">
+			<hr />
+			Time Format: 
+			<select id="timeFormat">
+				<option value="">--</option>
+				<option value="1">4:30 pm</option>
+				<option value="2">16:30</option>
+			</select>
+
+			Display Seconds:
+			<select id="showSeconds">
+				<option value="">--</option>
+				<option value="1">Yes</option>
+				<option value="2">No</option>
+			</select>
+
+			<hr />
+
+			Date Format 
+			<select id="dateFormat">
+				<option value="">--</option>
+				<option value="1">January 1 2012</option>
+				<option value="2">1 January 2012</option>
+				<option value="3">01/01/2012</option>
+			</select>
+
+			<hr />
+
+			Background: 
+			<select id="background">
+				<option value="">--</option>
+				<option value="1">Mountains</option>
+				<option value="2">Trees</option>
+				<option value="3">Island</option>
+				<option value="4">Grey Gradient</option>
+				<option value="5">Blue Gradient</option>
+				<option value="6">Dark Gradient</option>
+				<option value="0">No Background</option>
+			</select>
+
+			Color Scheme: 
+			<select id="colorScheme">
+				<option value="">--</option>
+				<option value="1">Grey</option>
+				<option value="2">Blue</option>
+				<option value="3">Dark</option>
+			</select>
+
+			</form>
+
+			<hr />
+
+			<h3> Shameless Self Promotion </h3>
+			<span style="font-size: 40px; letter-spacing: -2px;">My hosting company, Zee-Way hosting. If you want great hosting at a low, flat rate, use coupon code BANTP to get 20% off shared and vps hosting for life!</span>
+			<a href="http://www.zee-way.com"><img src="lib/img/zw_logo.png" alt="Zee-Way Hosting" title="Zee-Way Hosting" /></a>
+
+		</div>
 		
    <script>
      var _gaq = _gaq || [];
