--- a/tabPageFiles/bg.html
+++ b/tabPageFiles/bg.html
@@ -198,22 +198,25 @@ chrome.extension.onRequest.addListener( function( request , sender , sendRespons
 		}
 
 	} else if ( request.action == 'getConfig' ) {
-		console.log("Fetching config from local storage.");
 		var config = getConfig();
-		console.log( config );
 		sendResponse({ success : true , conf : config });
+	} else if ( request.action == 'setConfig' ) {
+		if( localStorage[configTable] = JSON.stringify( request.data ) ) {
+			sendResponse({ success : true });
+		} else {
+			sendResponse({ success : false });
+		}
 	}
 });
 
 function getConfig() {
 
-	console.log("Grabbing config");
 	if( !window.localStorage[configTable] ) {
-		console.log("Config not set up yet. Doing that now.");
+		//console.log("Config not set up yet. Doing that now.");
 		window.localStorage[configTable] = JSON.stringify( defaultConfig );
 		return defaultConfig;
 	} else {
-		console.log("Config already stored, parsing now.");
+		//console.log("Config already stored, parsing now.");
 		return JSON.parse( window.localStorage[configTable] );
 	}
 
