Wrapping up changes, then going to change the version number and zip it and send it. Yayyyy

--- a/tabPageFiles/bg.html
+++ b/tabPageFiles/bg.html
@@ -19,7 +19,7 @@ var configTable = "bantp_config";
 var defaultConfig = {
 	'background'	: 2, // Trees
 	'timeFormat'	: 1,
-	'displaySeconds': 2,
+	'showSeconds'	: 2,
 	'dateFormat'	: 1,
 	'colorScheme'	: 1
 };
