--- a/tabPageFiles/options.html
+++ b/tabPageFiles/options.html
@@ -37,8 +37,7 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 					3 : "url('lib/img/pacific.jpg') no-repeat top", // Island
 					4 : "-webkit-linear-gradient( #bbb , #888 )", // Grey Gradient
 					5 : "-webkit-linear-gradient( #1B70E0 , #0A317A )", // Blue Gradient
-					6 : "-webkit-linear-gradient( #555 , #111 )", // Dark Gradient
-					7 : ""  // No background
+					6 : "-webkit-linear-gradient( #555 , #111 )" // Dark Gradient
 				}
 
 				// Grab the current background
@@ -46,6 +45,8 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 
 				// Set the page background.
 				$("body").css("background", backgrounds[ current ] );
+				// Set the page background.
+				$(".sampleArea").css("background", backgrounds[ current ] );
 
 				// Now time for color schemes
 				// Define what colors they are.
@@ -69,13 +70,28 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 
 				$(".genbutton").css("background","-webkit-linear-gradient(" + current.start + "," + current.end + ")");
 
+
+
+			});
+
+		}
+
+		function setOptions() {
+
+			chrome.extension.sendRequest({ action : 'getConfig' } , function( response ) {
+				$("#timeFormat option[value=" + response.conf.timeFormat + "]").attr("selected","selected");
+				$("#showSeconds option[value=" + response.conf.showSeconds + "]").attr("selected","selected");
+				$("#background option[value=" + response.conf.background + "]").attr("selected","selected");
+				$("#colorScheme option[value=" + response.conf.colorScheme + "]").attr("selected","selected");
 			});
 
 		}
 
 		colorScheme();
+		setOptions();
 
 		$(document).ready(function() {
+
 			$("select").change(function() {
 
 				// First, assemble the configuration object to store
@@ -98,11 +114,24 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 					}
 				});
 
+				colorScheme();
+
 			});
 		});
 		
 
 </script>
+
+<style type="text/css">
+.sampleArea {
+	width: 80%;
+	padding: 10%;
+	background-position: bottom;
+	border: 1px #eee solid;
+	box-shadow: inset 0 0 10px #000;
+	background-size: 100% 100%;
+}
+</style>
 	</head>
 	<body style="background-size: cover;">
 		<div class="genBox">
@@ -145,7 +174,6 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 				<option value="4">Grey Gradient</option>
 				<option value="5">Blue Gradient</option>
 				<option value="6">Dark Gradient</option>
-				<option value="0">No Background</option>
 			</select>
 
 			Color Scheme: 
@@ -154,6 +182,10 @@ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND 
 				<option value="2">Grey</option>
 				<option value="3">Dark</option>
 			</select>
+
+			<div class="sampleArea">
+				<a href="#" class="genbutton" style="float: none;"><span class="gentext">Test</span></a>
+			</div>
 
 			</form>
 
